# AuditPulse

./: .gitignore  Data.dvc  README.md  broad_industry_classification.json  industry_classification.json  requirements.txt  ticker_sector_mapping.json
ModelPipeline/Backend/: README.md  dockerfile  environment.yml  pyproject.toml  requirements.txt
ModelPipeline/Backend/src/: app.py
ModelPipeline/Backend/src/auditpulse_flow/: main.py
ModelPipeline/Backend/src/auditpulse_flow/crews/audit_planning_crew/: audit_planning_crew.py
ModelPipeline/Backend/src/auditpulse_flow/crews/audit_planning_crew/config/: agents.yaml  tasks.yaml
ModelPipeline/Backend/src/auditpulse_flow/crews/client_acceptance_crew/: client_acceptance_crew.py
ModelPipeline/Backend/src/auditpulse_flow/crews/client_acceptance_crew/config/: agents.yaml  tasks.yaml
ModelPipeline/Backend/src/auditpulse_flow/crews/evaluation_reporting_crew/: evaluation_reporting_crew.py
ModelPipeline/Backend/src/auditpulse_flow/crews/evaluation_reporting_crew/config/: agents.yaml  tasks.yaml
ModelPipeline/Backend/src/auditpulse_flow/crews/testing_evidence_gathering_crew/: testing_evidence_gathering_crew.py
ModelPipeline/Backend/src/auditpulse_flow/data/: AuditPulseInfo.md
ModelPipeline/Backend/src/auditpulse_flow/tools/: custom_tool.py
ModelPipeline/Backend/src/data_validation/: README.md
ModelPipeline/Backend/src/data_validation/inputs/: us_public_companies.json
ModelPipeline/Backend/src/log_visualization/: vizCreator.py
ModelPipeline/Backend/tests/: test_audit_report_generation.py
dags/: airflow_dag.py  (+5 more)
(+94 files in other folders)
