[project]
name = "auditpulse_flow"
version = "0.1.0"
description = "auditpulse_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
]

[project.scripts]
kickoff = "auditpulse_flow.main:kickoff"
plot = "auditpulse_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
